# robosense_ac_3dgs

./: README.md  README_CN.md
preprocess/: .gitignore  README.md  README_CN.md  add_depth_to_gsdata.py  colmap_utils.py  slam2gsdata.py  test_depth_vaild.py  test_project_pc_to_image_colmap_style.py
preprocess/parser/: CMakeLists.txt  package.xml
preprocess/parser/src/: main.cpp
