<?xml version="1.0"?>
<package format="2">
  <name>extract_images</name>
  <version>0.0.1</version>
  <description>Extract images from ROS bag</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rosbag</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>opencv</depend>

  <export>
  </export>
</package>
